force-app/main/default/objects/identificationv2__x/identificationv2__x.object-meta.xml
<CustomObject>
    <description>identificationv2</description>
    <externalDataSource>Cosmos_DB</externalDataSource>
    <externalName>identificationv2</externalName>
    <label>identificationv2</label>
    <pluralLabel>identificationv2</pluralLabel>
</CustomObject>