force-app/main/default/objects/identificationv2__x/fields/IdExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>IdExpiryDate__c</fullName>
    <description>IdExpiryDate</description>
    <externalDeveloperName>IdExpiryDate</externalDeveloperName>
    <label>IdExpiryDate</label>
    <length>128</length>
    <type>Text</type>
</CustomField>