force-app/main/default/objects/identificationv2__x/fields/IdNumber__c.field-meta.xml
<CustomField>
    <fullName>IdNumber__c</fullName>
    <description>IdNumber</description>
    <externalDeveloperName>IdNumber</externalDeveloperName>
    <label>IdNumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>