force-app/main/default/objects/identificationv2__x/fields/IdType__c.field-meta.xml
<CustomField>
    <fullName>IdType__c</fullName>
    <description>IdType</description>
    <externalDeveloperName>IdType</externalDeveloperName>
    <label>IdType</label>
    <length>128</length>
    <type>Text</type>
</CustomField>